# chat-gpt3

./: README.md  pyproject.toml
chat_gpt3/: __main__.py
